# swarmfs

./: .gitignore  CLAUDE.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml  roadmap.md
.github/workflows/: publish.yml  tests.yml
docs/: USER_GUIDE.md  bee-feature-request.md  roadmap.md
swarmfs/: __init__.py  _client.py  _listing.py  bmt.py  commit.py  core.py  exceptions.py  feedfs.py  feeds.py  join.py  stamps.py
swarmfs/mantaray/: __init__.py  build.py  node.py  walk.py
tests/: capture_fixture.py  conftest.py  test_bmt.py  test_codec.py  test_exceptions.py  test_feedfs.py  test_fs.py  test_integration.py  test_patch.py  test_real_fixture.py  test_stamps.py  test_sync_client.py  test_upload_download.py  test_verify.py  test_walk.py  test_write_fs.py  test_zarr.py
tests/fixtures/: real_manifest.json
