[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmfs"
version = "0.1.0.dev0"
description = "fsspec backend for Ethereum Swarm (bzz://) via the Bee HTTP API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Peter Foldiak" }]
keywords = ["swarm", "ethereum", "fsspec", "bee", "bzz", "filesystem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "fsspec>=2023.6.0",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pandas",
    "pyarrow",
    "dask[dataframe]",
    "zarr>=3",
    "xarray",
]

[project.entry-points."fsspec.specs"]
bzz = "swarmfs:SwarmFileSystem"

[project.urls]
Homepage = "https://github.com/solarpunk/swarmfs"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
